# khadyota

./: .gitignore  Cargo.toml  README.md
benches/: distance.rs  search.rs
examples/: basic_usage.rs  demo.rs  parallel_benchmark.rs  performance_report.rs  semantic_search.rs
src/: config.rs  error.rs  lib.rs  types.rs  vector_db.rs
src/distance/: metrics.rs  mod.rs  scalar.rs  simd.rs
src/indexing/: ivf.rs  mod.rs
src/quantization/: codebook.rs  kmeans.rs  mod.rs  product_quantization.rs
src/storage/: format.rs  mmap.rs  mod.rs  quantized.rs  serialization.rs
tests/: integration.rs  ivf_speedup.rs
