[package]
name = "khadyota"
version = "0.1.0"
edition = "2024"
authors = ["Vivek Jami j.vivekvamsi@gmail.com"]
description = "High-performance vector search engine in Rust"
license = "MIT"
repository = "https://github.com/vivekjami/khadyota"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Parallelism
rayon = "1.10"

# Memory management
memmap2 = "0.9"

# Math
rand = "0.8"
rand_distr = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
ordered-float = "4.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
approx = "0.5"

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "search"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"